Ajustes desenvolvimento